--- a/flaskapp/templates/explore.html
+++ b/flaskapp/templates/explore.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+<!-- {% extends "layout.html" %}
 {% block otherstuff %}
 <script>
         let page_count = 1;
@@ -64,4 +64,4 @@
     </div>
 </div>
 
-{% endblock otherstuff %}
+{% endblock otherstuff %} -->
