--- a/flaskapp/templates/register.html
+++ b/flaskapp/templates/register.html
@@ -27,12 +27,12 @@
             .h-md-100 {
                 top: 0px;
                 height: 100vh;
-                background: ;
+                background:#121212 ;
             }
         }
 
         .left-landing {
-            background: url('https://raw.githubusercontent.com/horowest/ig_clone/master/flaskapp/static/cover/cover.jpg') center /cover;
+            background: url('https://verbit.ai/wp-content/uploads/2022/01/instagram-logo-captioning.jpg') center /cover;
             backdrop-filter: blur(6px);
         }
 
@@ -52,7 +52,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">Instaclone</a>
+                <a class="navbar-brand mr-4" href="/">Instareels</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -77,14 +77,9 @@
             <div class="col-md-8 p-0 h-md-100 left-landing">
                 <div class="text-white d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
                     <div class="logoarea pt-5 pb-5">
-                        <h1 class="text-uppercase text-light">An Instagram clone built with Python and Flask</h1>
+                        <h1 class="text-uppercase text-light"></h1>
                     </div>
-                    <div class="bottom-align-text">
-                        <small>
-                            *This project was build with the goal of understanding how instagram works.
-                            Even though it is a clone it's quite functional with core instagram features.
-                        </small>
-                    </div>
+
                 </div>
             </div>
 
