--- a/flaskapp/templates/new_post.html
+++ b/flaskapp/templates/new_post.html
@@ -75,7 +75,7 @@
         });
     });
 
-    /*  show uploaded image name */
+    /*  show uploaded video name */
     var input = document.getElementById( 'upload' );
     var infoArea = document.getElementById( 'upload-label' );
 
