Implemented infinite scrolling

--- a/flaskapp/templates/home.html
+++ b/flaskapp/templates/home.html
@@ -10,60 +10,47 @@
         let end_reached = false;
     
         document.addEventListener('DOMContentLoaded', () => {
-            load_posts(page_count++);
+        load_posts(page_count++);
 
-            window.onscroll = () => {
-                // check if we reached the bottom
-                if(window.innerHeight + window.scrollY >= document.body.offsetHeight && end_reached == false) {
-                    // alert("bottom");
-                    load_posts(page_count++);
-                }
-            }; 
-        });
+        window.onscroll = () => {
+            if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
+                load_posts(page_count++);
+            }
+        }; 
+    });
 
 
         function load_posts(start) {
-            // init a new request
-            const req = new XMLHttpRequest();
-            req.open('POST', $SCRIPT_ROOT + '/');
-            //req.open('POST', $SCRIPT_ROOT + '/')
+        const req = new XMLHttpRequest();
+        req.open('POST', $SCRIPT_ROOT + '/');
 
-            // callback function when data is loaded
-            req.onload = () => {
-                // extract data
-                const data = JSON.parse(req.responseText);
-                
-                if (data.success) {
-                    if(data.result.length === 0) {
-                        end_reached = true;
-                        return false;
-                    }
-                    // loads posts
-                    data.result.forEach(post => {
-                        // add new post
-                        const content = template(post);
-                        $('.special').append(content);
-                        // add event handlers
-                        document.querySelector(`#sh-${post.pid}`).onclick = link_share;
-                        document.querySelector(`#l-${post.pid}`).onclick = like_post;
-                        document.querySelector(`#c-${post.pid}`).onclick = comment_handler;
-                        document.querySelector(`#c-${post.pid}`).disabled = true;
-                        document.querySelector(`#comment-on-${post.pid}`).onkeyup = enable_disable_button;
-                    });
-
+        req.onload = () => {
+            const data = JSON.parse(req.responseText);
+            if (data.success) {
+                if (data.result.length === 0) {
+                    page_count = 1; 
+                    load_posts(page_count); 
+                    return;
                 }
-                else
-                    alert("Something went wrong", data.result);
-            };
+                data.result.forEach(post => {
+                    const content = template(post);
+                    $('.special').append(content);
+                    document.querySelector(`#sh-${post.pid}`).onclick = link_share;
+                    document.querySelector(`#l-${post.pid}`).onclick = like_post;
+                    document.querySelector(`#c-${post.pid}`).onclick = comment_handler;
+                    document.querySelector(`#c-${post.pid}`).disabled = true;
+                    document.querySelector(`#comment-on-${post.pid}`).onkeyup = enable_disable_button;
+                });
+            } else {
+                alert("Something went wrong", data.result);
+            }
+        };
 
-            // add data
-            const param = new FormData();
-            param.append('start', start);
+        const param = new FormData();
+        param.append('start', start);
 
-            // Send request
-            req.send(param);
-        //};
-        }
+        req.send(param);
+    }
 
     </script>
 
